--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,5 +23,9 @@
             android:text="Enable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/buttonEnable" android:textSize="18sp"/>
+    <Button
+            android:text="Reset"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/buttonReset" android:textSize="18sp"/>
 
 </LinearLayout>
